Move searchbox to main panel. Fix dark mode search.

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -248,6 +248,30 @@ a:has(> img:only-child) {
 div.body p, div.body dd, div.body li, div.body blockquote {
   hyphens: none;
 }
+.pagefind-ui__form {
+    width: 200px;
+    left: auto;
+    top: 10px;
+    right: 30px;
+    float: inline-end;
+    overflow: visible;
+    position: relative;
+}
+
+.pagefind-ui__drawer {
+    background-color: #f8f8f8;
+    box-shadow: 0 6px 10px rgb(0 0 0 / 0.2);
+    position: absolute;
+    right: 0;
+    width: 650px;
+    z-index: 1500;
+    margin-top: 4px;
+    padding-right: 6px;
+    padding-left: 6px;
+    border-radius: 12px;
+    transition: height 0.3s ease-in-out;
+
+}
 
 /* dark theme */
 @media (prefers-color-scheme: dark) {
@@ -343,5 +367,18 @@ div.body p, div.body dd, div.body li, div.body blockquote {
   dt:target, span.highlighted {
     background-color: #8e8129;
   }
+
+  .pagefind-ui__drawer {
+    background-color: #313131;
+    box-shadow: 0 6px 10px rgb(0 0 0 / 0.8);
+  }
+  :root {
+    --pagefind-ui-primary: #eeeeee;
+    --pagefind-ui-text: #eeeeee;
+    --pagefind-ui-background: #152028;
+    --pagefind-ui-border: #152028;
+    --pagefind-ui-tag: #152028;
+  }
+
 
 }
